--- a/analyses/make_videos.Rmd
+++ b/analyses/make_videos.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "mixture_model_analysis"
+title: "make_videos"
 output: html_document
 ---
 
@@ -19,62 +19,34 @@ library(hash)
 library(rstan)
 library(png)
 library(gtable)
-#library(rjson)
 
-paper_theme <- theme_light() + theme( axis.title.x = element_text(size=22),
-                                      axis.text.x=element_text(
-                                        size = 18), 
-                                      axis.title.y = element_text(size = 22, vjust = 1),
-                                      axis.text.y  = element_text(size = 18),
-                             strip.text=element_text(size=16),
-                                      axis.line.x = element_line(colour = "black"), 
-                                      axis.line.y = element_line(colour = "black"),
-                                      legend.title=element_text(size=20),
-                                      legend.text=element_text(size=16),
-                                      panel.grid.major=element_blank(),
-                #   panel.background = element_rect(color = NA), 
-                                      panel.grid.minor=element_blank())  
-out_folder <- "figs/"
-
-capitalize_words <- function(s) {
-  words <- str_split(s, " ")[[1]]
-  words <- ifelse(words == "to", "to", str_to_title(words))
-  paste(words, collapse = " ")
-}
-add_png_to_facet <- function(ggplot_object, data, facet_var, x_loc,y_loc, width, height, out_file) {
-  # Get the ggplotGrob
-  gtable <- ggplotGrob(ggplot_object)
-  # Get the unique facet labels in the order they appear in the data
-  facet_labels <- unique(data[[facet_var]])
-  # Extract panel positions from the layout
-  panel_positions <- subset(gtable$layout, grepl("panel", name))
-  # Order the panels by their left (l) and top (t) positions
-  ordered_panel_positions <- with(panel_positions, order(t, l))
-  # Ensure the facet labels order matches the plot
-  # For each ordered panel position, add the PNG
-  for (i in seq_along(ordered_panel_positions)) {
-    panel_index <- ordered_panel_positions[i]
-    facet_label <- facet_labels[i]
-    if (!is.na(facet_label)) {
-      img <- readPNG(paste0("figs/func_ims/", facet_label, ".png"))
-      # Convert to raster and add it to the gtable
-      g <- rasterGrob(img, interpolate = TRUE, width = unit(0.24, "npc"), height = unit(0.3, "npc"))
-      g <- editGrob(g, vp = viewport(x = x_loc, y = y_loc, just = c("right", "top")))
-      gtable <- gtable_add_grob(gtable, g, t = panel_positions$t[panel_index], l = panel_positions$l[panel_index])
-    }
+preprocess_df_model <- function(df) {
+  logsumexp <- function(x) {
+    max_x <- max(x)
+    max_x + log(sum(exp(x - max_x)))
   }
-  png(filename = out_file, width = width, height = height, units = 'mm', res = 400)
-  grid.draw(gtable)
-  dev.off()
+  df<-df[order(df$tpt),]
+  df <- df %>%
+      group_by(tpt, seq_id) %>%
+      mutate(total_log_likelihood = logsumexp(score)) %>%
+      ungroup() %>%
+      mutate(posterior = exp(score - total_log_likelihood)) %>%
+      group_by(seq_id, particle) %>%
+      arrange(tpt) %>%  # Sort the DataFrame by tpt to ensure correct lagging
+      mutate(prev_x = lag(true_x), prev_y = lag(true_y)) %>%
+      ungroup() %>%
+      mutate(true_dist=((true_x-prev_x)**2. + (true_y-prev_y)**2.)**0.5) %>%
+      mutate(err_x=pred_x-true_x) %>%
+      mutate(err_y=pred_y-true_y) %>%
+      mutate(abs_err = ((err_x**2)+(err_y)**2) **0.5) %>%  
+      mutate(abs_rel_err = abs_err/(true_dist)) %>%
+      #group_by(seq_id, tpt) %>%
+      #mutate(norm_abs_rel_err = sum(abs_rel_err * posterior, na.rm=T)) %>%
+      #ungroup() %>%
+      rename(x_curr = prev_x, y_curr = prev_y, x_next = true_x, y_next = true_y, x_pred = pred_x, y_pred = pred_y, func.type = seq_id)
+  return(df)
 }
 
-
-f_weighted_sd <- function(means, sds, weights)  {
-  var_wtd = sum(weights * sds**2) + sum(weights * means**2) - (sum(weights*means)**2)
-  return (var_wtd**0.5)
-}
-
-inv_logit <- function(x) { exp(x)/(1+exp(x))}
 preprocess_df_human <- function(df) {
   df <- df[order(df$tpt),] %>%
       rename(x_curr = prev_x, y_curr = prev_y, x_next = true_x, y_next = true_y, x_pred = response_x, y_pred = response_y, func.type = seq_id) %>%
@@ -119,24 +91,103 @@ add_perfect_subject <- function(df) {
 }
 ```
 
+
+
 ```{r}
-df_kid <- read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/dots_app_kids/data/clean_data/data.csv")
-df_kid <- preprocess_df_human(df_kid)
-#write.csv(df, 'preprocessed_data.csv')
+df_kid <- 
+df_kid <- preprocess_df_human(read.csv("data/participants/kids.csv"))
+df_adult <- preprocess_df_human(read.csv("data/participants/adults.csv"))
+df_monkey <- preprocess_df_monkey(read.csv("data/participants/monkey_1.csv"))
 ```
+
+
+
+# Videos comparing adults to LoT particle + noise
 ```{r}
-df_adult <- read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/dots_app_kids_adult_vsn/data/clean_data/data.csv")
-df_adult <- preprocess_df_human(df_adult)
+out_folder <- "figs/videos/ln_uncertainty_frames"
+
+df <- df_adult
+df <- df[order(df$tpt),]
+
+df_model <- df_lot
+df_model <- df_model %>% filter(tpt>2)
+
+unlink(out_folder, recursive=TRUE)
+dir.create(out_folder)
+
+f_plot_func_sbs <- function(f) {
+  df_seq <- subset(df, (df$func.type == f))
+  dir.create(paste(out_folder, f, sep="/"))
+  #need range for setting scale of plot
+  x_min <- min(min(df_seq$x_next, na.rm=TRUE), min(df_seq$x_pred, na.rm=TRUE))
+  x_max <- max(max(df_seq$x_next, na.rm=TRUE), max(df_seq$x_pred, na.rm=TRUE))
+  y_min <- min(min(df_seq$y_next, na.rm=TRUE), min(df_seq$y_pred, na.rm=TRUE))
+  y_max <- max(max(df_seq$y_next, na.rm=TRUE), max(df_seq$y_pred, na.rm=TRUE))
+  range_x <- (x_max-x_min)
+  range_y <- (y_max-y_min)
+  shift_x1<-0
+  shift_y1<-0
+  shift_x2<-range_x*1.8
+  shift_y2<-0
+  offset_x<-0
+  offset_y<-0
+  
+  k = 2
+  
+  for (i in (min(df$tpt)+1):max(df$tpt)) {
+    df_tpt <- subset(df_seq, (df_seq$tpt == i))
+    df_hist <- subset(df_seq, (df_seq$tpt < i))
+    df_hist <- df_hist[order(df_hist$tpt),]
+    
+    p <- ggplot() +
+      #prev points and path
+      geom_path(data=df_hist, aes(x=shift_x1+x_next, y=shift_y1+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x1+x_next, y=shift_y1+y_next), size=3) +
+      geom_path(data=df_hist, aes(x=shift_x2+x_next, y=shift_y2+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x2+x_next, y=shift_y2+y_next), size=3) +
+
+      #next true point
+      geom_point(data=df_tpt, aes(x=shift_x1+x_next, y=shift_y1+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=shift_x2+x_next, y=shift_y2+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      
+      #first human response
+      geom_point(data=df_tpt, aes(x=shift_x1+x_pred, y=shift_y1+y_pred, color="human"), shape=4, size=3, stroke=1) +
+      #model response
+      geom_ellipse(data=df_model%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+                   aes(x0=shift_x2+x_pred, y0=shift_y2+y_pred, a=sd_x*k, b=sd_y*k, angle=0), fill="purple3", color=NA, alpha=0.1) + 
+      geom_point(data=df_model%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+                 aes(x=shift_x2+x_pred, y=shift_y2+y_pred,  color="LoT"), shape=4, size=3, stroke=1) +
+      #geom_errorbar(data=df_model%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=1, wt=posterior),
+                     #aes(x=shift_x2+x_pred, ymin=shift_y2+y_pred-(k*sd_y), ymax=shift_y2+y_pred+(k*sd_y), color="LoT"), width=0) +
+      #geom_errorbar(data=df_model%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=1, wt=posterior),
+                     #aes(y=shift_y2+y_pred, xmin=shift_x2+x_pred-(k*sd_x), xmax=shift_x2+x_pred+(k*sd_x), color="LoT"), width=0) +
+      coord_cartesian(xlim=c(x_min-range_x*.5, x_min+(range_x*3.3)), ylim=c(y_min-(range_y*.5), y_min+(range_y*1.5))) +
+      #coord_cartesian(xlim=c(x_min, x_max*2 + offset_x), ylim=c(y_min, y_max + offset_y)) +
+      theme_void() +
+      theme(panel.background = element_rect(fill = "white"), legend.background = element_rect(fill = "white"), legend.title=element_blank(), legend.position = "top")+
+      guides(alpha="none",size="none") +
+      scale_color_manual(labels = c("human"="human", "LoT"="LoT", "lot_new"="lot_new"), values=c("human"='turquoise', "lot_old"='tomato', "LoT"="purple1"))
+      #scale_radius(range=c(0.75,1.5))
+    f_name <- paste(paste(paste(paste(out_folder, f, sep="/"),f,sep="/"), as.character(i),sep="_n"),".png",sep="")
+    ggsave(f_name, plot=p,width=9,height=8, dpi=500)
+  }
+}
+
+for (id in sort(unique(df$func.type))) {
+  print(id)
+  f_plot_func_sbs(id)
+  print("")
+}
+
 ```
-```{r}
-df_monkey <- read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/monkey_game/data/monkeys_clean.csv")
-df_monkey <- preprocess_df_monkey(df_monkey)
-```
-#trace vids
+
+
+
+# trace vids
 ```{r}
 #now make vids
 df <- df_kid
-out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/figs/videos/kid_trace_frames"
+out_folder <- "figs/videos/kid_trace_frames"
 
 #we want, at each tpt, the x and y movement from curr_x and curr_y
 #to get trajectory, want to start at 0,0 and add vecs at each tpt
@@ -205,11 +256,12 @@ for (id in sort(unique(df$func.type))) {
   print("")
 }
 ```
-#trace vids for monkeys
+
+# trace vids for monkeys
 ```{r}
 #now make vids
 df <- df_monkey
-out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/figs/videos/monkey_trace_frames"
+out_folder <- "figs/videos/monkey_trace_frames"
 
 perfect_subject <- df %>%
                    group_by(func.type, tpt) %>%
@@ -289,10 +341,10 @@ for (id in sort(unique(df$func.type))) {
 ```
 
 
-#Error videos!
+# Error videos!
 ```{r}
 #now make vids
-out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/figs/videos/kid_err_frames"
+out_folder <- "figs/videos/kid_err_frames"
 
 #we want, at each tpt, the x and y movement from curr_x and curr_y
 #to get trajectory, want to start at 0,0 and add vecs at each tpt
@@ -383,10 +435,11 @@ for (id in sort(unique(df$func.type))) {
 }
 ```
 
-#Good old fashioned prediction videos
+
+# Good old fashioned prediction videos
 ```{r}
-df <- df_monkey %>% filter(tpt<15)
-out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/figs/videos/monkey_prediction_frames"
+df <- df_monkey
+out_folder <- "figs/videos/monkey_prediction_frames_new"
 
 df <- df[order(df$tpt),] %>%
       mutate(success = ifelse(correct==1, "True", "False"))
@@ -446,8 +499,8 @@ for (id in sort(unique(df$func.type))) {
 
 #Faceted prediction videos
 ```{r}
-df <- df_kid
-out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/figs/videos/kid_prediction_facet_frames"
+df <- df_monkey
+out_folder <- "figs/videos/monkey_prediction_run_facet_frames_new"
 
 df <- df[order(df$tpt),] %>%
       mutate(success = ifelse(correct==1, "True", "False"))
@@ -487,11 +540,11 @@ f_plot_func_sbs <- function(f) {
       geom_point(data=df_tpt, aes(x=shift_x1+x_next, y=shift_y1+y_next), color="gold", shape=8, size=2, stroke=1.5) +
       geom_point(data=df_tpt, aes(x=shift_x1+x_pred, y=shift_y1+y_pred, color=success), shape=3, size=3, stroke=1.5) +
       coord_cartesian(xlim=c(x_min, x_max + offset_x), ylim=c(y_min, y_max + 2*offset_y)) +
-      theme_void() +
-      theme(panel.background = element_rect(fill = "white"), legend.background = element_rect(fill = "white"), legend.title=element_blank(), legend.position = "top")+
+      #theme_void() +
+      theme(axis.text = element_blank(), axis.title=element_blank(), axis.ticks = element_blank(),  panel.background = element_rect(fill = "white", color="black"), strip.text=element_text(), legend.background = element_rect(fill = "white"), legend.title=element_blank(), legend.position = "top")+
       guides(alpha="none",size="none") +
       scale_color_manual(labels = c("True"="correct", "False"="incorrect"), values=c("True"='aquamarine3', "False"='coral1')) +
-      facet_wrap(~subject_id)
+      facet_wrap(~subject_id + run_id)
       #scale_radius(range=c(0.75,1.5))
     f_name <- paste(paste(paste(paste(out_folder, f, sep="/"),f,sep="/"), as.character(i),sep="_n"),".png",sep="")
     ggsave(f_name, plot=p,width=12,height=12, dpi=500)
@@ -501,15 +554,14 @@ f_plot_func_sbs <- function(f) {
 for (id in sort(unique(df$func.type))) {
   print(id)
   f_plot_func_sbs(id)
-  #print("")
 }
 
 ```
 
-#Prediction vector vids
+# Prediction vector vids, each group side by side
 ```{r}
 #now make vids
-out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/kids/figs/videos/prediction_vector_frames"
+out_folder <- "figs/videos/prediction_vector_frames"
 
 #we want, at each tpt, the x and y movement from curr_x and curr_y
 #to get trajectory, want to start at 0,0 and add vecs at each tpt
@@ -522,8 +574,7 @@ df_plot_kid <- df_kid %>%
       mutate(trajectory_x = cumsum(replace(vec_x, is.na(vec_x), 0)), trajectory_y = cumsum(replace(vec_y, is.na(vec_y), 0)), true_trajectory_x = cumsum(replace(true_vec_x, is.na(true_vec_x), 0)), true_trajectory_y = cumsum(replace(true_vec_y, is.na(true_vec_y), 0))) %>%
       mutate(prev_traj_x = trajectory_x-vec_x, prev_traj_y = trajectory_y-vec_y) %>%
       ungroup() %>% filter(tpt>2)
-```
-```{r}
+
 df_plot_adult <- df_adult %>%
       mutate(vec_x = x_pred-x_curr, vec_y = y_pred-y_curr, true_vec_y = y_next-y_curr, true_vec_x = x_next-x_curr) %>%
       arrange(subject_id, func.type, tpt) %>%
@@ -531,8 +582,7 @@ df_plot_adult <- df_adult %>%
       mutate(trajectory_x = cumsum(replace(vec_x, is.na(vec_x), 0)), trajectory_y = cumsum(replace(vec_y, is.na(vec_y), 0)), true_trajectory_x = cumsum(replace(true_vec_x, is.na(true_vec_x), 0)), true_trajectory_y = cumsum(replace(true_vec_y, is.na(true_vec_y), 0))) %>%
       mutate(prev_traj_x = trajectory_x-vec_x, prev_traj_y = trajectory_y-vec_y) %>%
       ungroup() %>% filter(tpt>2)
-```
-```{r}
+
 df_plot_monkey <- df_monkey %>%
       mutate(vec_x = x_pred-x_curr, vec_y = y_pred-y_curr, true_vec_y = y_next-y_curr, true_vec_x = x_next-x_curr) %>%
       arrange(run_id, func.type, tpt) %>%
@@ -541,8 +591,6 @@ df_plot_monkey <- df_monkey %>%
       mutate(prev_traj_x = trajectory_x-vec_x, prev_traj_y = trajectory_y-vec_y) %>%
       ungroup()
 
-```
-```{r}
 
 unlink(out_folder, recursive=TRUE)
 dir.create(out_folder)
@@ -605,7 +653,7 @@ f_plot_func_sbs <- function(f) {
       geom_text(aes(x = monkey_pos, y = y_min+0.5, label = "Monkeys"), hjust = 0.5,color = "black") +
       geom_text(aes(x = adult_pos, y = y_min+0.5, label = "Adults"), hjust = 0.5,color = "black")
     
-    img <- readPNG(sprintf("../figs/func_ims/%s.png", f))
+    img <- readPNG(sprintf("figs/func_ims/%s.png", f))
     # Add the image to the plot in the top right corner
     #p <- p + annotation_custom(rasterGrob(img, width = unit(1, "npc"), height = unit(1, "npc")),
     #                  xmin = Inf, xmax = Inf, ymin = Inf, ymax = Inf)
@@ -614,8 +662,7 @@ f_plot_func_sbs <- function(f) {
     ggsave(f_name, plot=p,width=10,height=10, dpi=500)
   }
 }
-```
-```{r}
+
 for (id in sort(unique(df_kid$func.type))) {
   print(id)
   f_plot_func_sbs(id)
@@ -623,12 +670,193 @@ for (id in sort(unique(df_kid$func.type))) {
 }
 ```
 
+# Predictions by kid, for all functions
+```{r}
+df <- df_kid
+out_folder <- "figs/videos/kids_ind"
+
+df <- df[order(df$tpt),] %>%
+      mutate(success = ifelse(correct==1, "True", "False"))
+unlink(out_folder, recursive=TRUE)
+dir.create(out_folder)
+f_plot_func_sbs <- function(subj) {
+  df_subj <- subset(df, (df$subject_id == subj))
+  dir.create(paste(out_folder, subj, sep="/"))
+  #need range for setting scale of plot
+  df_subj <- df_subj %>%
+             group_by(func.type) %>%
+             mutate(x_min = min(min(x_next, na.rm=TRUE), min(x_pred, na.rm=TRUE)),
+                    x_max = max(max(x_next, na.rm=TRUE), max(x_pred, na.rm=TRUE)),
+                    y_min = min(min(y_next, na.rm=TRUE), min(y_pred, na.rm=TRUE)),
+                    y_max = max(max(y_next, na.rm=TRUE), max(y_pred, na.rm=TRUE)))
+  #df_subj$func_ordered <- factor(df_subj$func.type, levels = df_subj$func.type[order(df_subj$trial_idx)])
+  for (i in (min(df$tpt)+1):max(df$tpt)) {
+    df_tpt <- subset(df_subj, (df_subj$tpt == i))
+    df_hist <- subset(df_subj, (df_subj$tpt < i))
+    df_hist <- df_hist[order(df_hist$tpt),]
+    #order by trial idx
+    df_tpt$func_ordered <- factor(df_tpt$func.type, levels = df_tpt$func.type[order(df_tpt$trial_idx)])
+    df_hist$func_ordered <- df_hist$func.type
+    p <- ggplot() +
+      #first human response
+      geom_point(data=df_hist, aes(x=x_next, y=y_next), size=3) +
+      geom_path(data=df_hist, aes(x=x_next, y=y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_tpt, aes(x=x_next, y=y_next), color="gold", shape=8, size=2, stroke=1.5) +
+      geom_point(data=df_tpt, aes(x=x_pred, y=y_pred, color=success), shape=3, size=3, stroke=1.5) +
+      geom_vline(data=df_tpt, aes(xintercept=x_min-.3), color="white") +
+      geom_vline(data=df_tpt, aes(xintercept=x_max+.3), color="white") +
+      geom_hline(data=df_tpt, aes(yintercept=y_min-.3), color="white") +
+      geom_hline(data=df_tpt, aes(yintercept=y_max+.3), color="white") +
+      coord_cartesian() +
+      #coord_cartesian(xlim=c(x_min, x_max + offset_x), ylim=c(y_min, y_max + offset_y)) +
+      theme(axis.text = element_blank(), axis.title=element_blank(), axis.ticks = element_blank(),  panel.background = element_rect(fill = "white", color="black"), strip.text=element_text(), legend.background = element_rect(fill="white"), legend.title=element_blank(), legend.position="top")+
+      guides(alpha="none",size="none") +
+      scale_color_manual(labels = c("True"="correct", "False"="incorrect"), values=c("True"='aquamarine3', "False"='coral1')) +
+      facet_wrap(~func_ordered,scales="free")
+    f_name <- paste(paste(paste(out_folder, subj, sep="/"), as.character(i), sep="/n"),".png",sep="")
+    ggsave(f_name, plot=p,width=12,height=12, dpi=500)
+  }
+}
+
+for (id in sort(unique(df$subject_id))) {
+  print(id)
+  f_plot_func_sbs(id)
+}
+
+```
 
 
+# Compare some combo of models and natural intelligences
+```{r}
 
+out_folder <- "figs/videos/models_and_kids"
 
+df <- df_kid
+df <- df[order(df$tpt),]
 
+unlink(out_folder, recursive=TRUE)
+dir.create(out_folder)
 
+f_plot_func_sbs <- function(f) {
+  df_seq <- subset(df, (df$func.type == f))
+  dir.create(paste(out_folder, f, sep="/"))
+  #need range for setting scale of plot
+    
+  #we have min x and max x
+  #we want some buffer in between -- say, max-min/2.
+  #so, the first shift should be by max_x + (max-min/2)
+  #the first point is not shifted. it goes from min_x to max_x. 
+  #Next, we want to move all the points over by something. we should move it over by the range. 
+  
+  x_min <- min(min(df_seq$x_next, na.rm=TRUE), min(df_seq$x_pred, na.rm=TRUE))
+  x_max <- max(max(df_seq$x_next, na.rm=TRUE), max(df_seq$x_pred, na.rm=TRUE))
+  y_min <- min(min(df_seq$y_next, na.rm=TRUE), min(df_seq$y_pred, na.rm=TRUE))
+  y_max <- max(max(df_seq$y_next, na.rm=TRUE), max(df_seq$y_pred, na.rm=TRUE))
+  
+  range_x <- (x_max-x_min)
+  range_y <- (y_max-y_min)
+  range_x = range_x
+  range_y = range_y
+  
+  shift_x1<-0
+  shift_y1<-0
+  shift_x2<-range_x*1.5
+  shift_y2<-0
+  shift_x3<-(range_x*1.5)*2
+  shift_y3<-0
+  
+  shift_x4<-0
+  shift_y4<-range_y*1.5
+  shift_x5<-range_x*1.5
+  shift_y5<-range_y*1.5
+  shift_x6<-range_x*1.5*2
+  shift_y6<- range_y*1.5
+  offset_x<-0
+  offset_y<-0
+  print(range_y)
+  for (i in (min(df$tpt)+1):max(df$tpt)) {
+    df_tpt <- subset(df_seq, (df_seq$tpt == i))
+    df_hist <- df_seq[order(df_seq$tpt),] %>% filter(tpt<i)
+    
+    k=2
+    
+    p <- ggplot() +
+      #separating lines
+      #geom_vline(xintercept = shift_x1, linetype = "dashed") +
+      geom_vline(xintercept = x_min + range_x*1.5 - range_x*.25, linetype = "dashed", alpha=0.5) +
+      geom_vline(xintercept = x_min + range_x*1.5*2 - range_x*.25, linetype = "dashed", alpha=0.5) +
+      geom_hline(yintercept = y_min + range_y*1.5 - range_y*.25, linetype = "dashed", alpha=0.5) +
+      
+      
+      #prev points and path
+      geom_path(data=df_hist, aes(x=shift_x1+x_next, y=shift_y1+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x1+x_next, y=shift_y1+y_next), size=3) +
+      geom_path(data=df_hist, aes(x=shift_x2+x_next, y=shift_y2+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x2+x_next, y=shift_y2+y_next), size=3) +
+      geom_path(data=df_hist, aes(x=shift_x3+x_next, y=shift_y3+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x3+x_next, y=shift_y3+y_next), size=3) +
+      geom_path(data=df_hist, aes(x=shift_x4+x_next, y=shift_y4+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x4+x_next, y=shift_y4+y_next), size=3) +
+      geom_path(data=df_hist, aes(x=shift_x5+x_next, y=shift_y5+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x5+x_next, y=shift_y5+y_next), size=3) +
+      geom_path(data=df_hist, aes(x=shift_x6+x_next, y=shift_y6+y_next), size=0.25, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=shift_x6+x_next, y=shift_y6+y_next), size=3) +
 
+      
+      #next true point
+      geom_point(data=df_tpt, aes(x=shift_x1+x_next, y=shift_y1+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=shift_x2+x_next, y=shift_y2+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=shift_x3+x_next, y=shift_y3+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=shift_x4+x_next, y=shift_y4+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=shift_x5+x_next, y=shift_y5+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      geom_point(data=df_tpt, aes(x=shift_x6+x_next, y=shift_y6+y_next), color="gold", shape=8, size=4, stroke=2.0) +
+      
+      #first human response
+      geom_point(data=df_tpt, aes(x=shift_x1+x_pred, y=shift_y1+y_pred, color="Children"), shape=4, size=3, stroke=1) +
+      
+      #models
+      # predictions + noise from top 3 particles
+      #geom_ellipse(data=df_lot%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+                   #aes(x0=shift_x2+x_pred, y0=shift_y2+y_pred, a=sd_x*k, b=sd_y*k, angle=0, fill="LoT"), color=NA, alpha=0.1) + 
+      #geom_point(data=df_lot%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+      #           aes(x=shift_x2+x_pred, y=shift_y2+y_pred,  color="LoT"), shape=4, size=3, stroke=1) +
+      #geom_ellipse(data=df_gpsl%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+       #            aes(x0=shift_x3+x_pred, y0=shift_y3+y_pred, a=sd_x*k, b=sd_y*k, angle=0, fill="GPSL"), color=NA, alpha=0.1) + 
+      #geom_point(data=df_gpsl%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+       #          aes(x=shift_x3+x_pred, y=shift_y3+y_pred,  color="GPSL"), shape=4, size=3, stroke=1) +
+      #geom_ellipse(data=df_gpnc%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+                   #aes(x0=shift_x4+x_pred, y0=shift_y4+y_pred, a=sd_x*k, b=sd_y*k, angle=0, fill="GPNC"), color=NA, alpha=0.1) + 
+      #geom_point(data=df_gpnc%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+      #           aes(x=shift_x4+x_pred, y=shift_y4+y_pred,  color="GPNC"), shape=4, size=3, stroke=1) +
+      #geom_ellipse(data=df_ridge%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+                   #aes(x0=shift_x5+x_pred, y0=shift_y5+y_pred, a=sd_x*k, b=sd_y*k, angle=0, fill="Ridge"), color=NA, alpha=0.1) + 
+      #geom_point(data=df_ridge%>%filter(tpt==i)%>%filter(func.type==f)%>%top_n(n=3, wt=posterior),
+      #           aes(x=shift_x5+x_pred, y=shift_y5+y_pred,  color="Ridge"), shape=4, size=3, stroke=1) +
+      #geom_point(data=df_lin%>%filter(tpt==i)%>%filter(func.type==f),
+      #           aes(x=shift_x6+x_pred, y=shift_y6+y_pred,  color="Linear"), shape=4, size=3, stroke=1) +
+      
+      # Or, predictions from all particles
+      geom_point(data=df_lot%>%filter(tpt==i)%>%filter(func.type==f), aes(x=shift_x2+x_pred, y=shift_y2+y_pred,  alpha=posterior, color="LoT"), shape=4, size=3, stroke=1) +
+      geom_point(data=df_gpsl%>%filter(tpt==i)%>%filter(func.type==f), aes(x=shift_x3+x_pred, y=shift_y3+y_pred, alpha=posterior, color="GPSL"), shape=4, size=3, stroke=1) +
+      geom_point(data=df_gpnc%>%filter(tpt==i)%>%filter(func.type==f), aes(x=shift_x4+x_pred, y=shift_y4+y_pred, alpha=posterior, color="GPNC"), shape=4, size=3, stroke=1) +
+      geom_point(data=df_ridge%>%filter(tpt==i)%>%filter(func.type==f), aes(x=shift_x5+x_pred, y=shift_y5+y_pred, alpha=posterior, color="Ridge"), shape=4, size=3, stroke=1) +
+      geom_point(data=df_lin%>%filter(tpt==i)%>%filter(func.type==f), aes(x=shift_x6+x_pred, y=shift_y6+y_pred, color="Linear"), shape=4, size=3, stroke=1) +
 
+      coord_cartesian(xlim=c(x_min-range_x*.5, x_min+(range_x*1.5*3)), ylim=c(y_min-(range_y*.5), y_min+(range_y*1.5*2))) +
+      theme_void() +
+      theme(panel.background = element_rect(fill = "white"), legend.background = element_rect(fill = "white"), legend.title=element_blank(), legend.position = "top")+
+      guides(alpha="none",size="none", fill="none") +
+      scale_color_manual(labels = c("Children"="Children", "LoT"="LoT", "GPSL"="GPSL", "GPNC"="GPNC", "Ridge"="Ridge", "Linear"="Linear"), values=c("GPNC"="purple2", "Ridge"="orange1", "Linear"="darkslategray4", "Children"="cornflowerblue", "LoT"="darkolivegreen3", "GPSL"="tomato"), limits = c("GPNC", "Children", "Ridge", "LoT", "Linear", "GPSL")) +
+      scale_fill_manual(labels = c("Children"="Children", "LoT"="LoT", "GPSL"="GPSL", "GPNC"="GPNC", "Ridge"="Ridge", "Linear"="Linear"), values=c("GPNC"="purple2", "Ridge"="orange1", "Linear"="darkslategray4", "Children"="cornflowerblue", "LoT"="darkolivegreen3", "GPSL"="tomato"), limits = c("GPNC", "Children", "Ridge", "LoT", "Linear", "GPSL"))
+      #scale_radius(range=c(0.75,1.5))
+    f_name <- paste(paste(paste(paste(out_folder, f, sep="/"),f,sep="/"), as.character(i),sep="_n"),".png",sep="")
+    ggsave(f_name, plot=p,width=9,height=8, dpi=500)
+  }
+}
 
+for (id in sort(unique(df$func.type))) {
+  print(id)
+  f_plot_func_sbs(id)
+  print("")
+}
+```
