--- a/analyses/visualize_predictions.Rmd
+++ b/analyses/visualize_predictions.Rmd
@@ -99,9 +99,9 @@ add_perfect_subject <- function(df) {
 
 
 ```{r}
-df_kid <- preprocess_df_human(read.csv("data/participants/kids.csv")) %>% select(-X.1)
-df_adult <- preprocess_df_human(read.csv("data/participants/adults.csv"))
-df_monkey <- preprocess_df_monkey(read.csv("data/participants/monkeys_all.csv"))
+df_kid <- preprocess_df_human(read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/data/participants/kids.csv")) %>% select(-X.1)
+df_adult <- preprocess_df_human(read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/data/participants/adults.csv"))
+df_monkey <- preprocess_df_monkey(read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/data/participants/monkeys_all.csv"))
 
 #df_kid_ind <- preprocess_df_human(read.csv("/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/human_experiments/dots_app_kids/ind_dif_data/clean_data/data.csv"))
 #df_kid <- rbind(df_kid, df_kid_ind)
@@ -116,23 +116,38 @@ df_ridge <- preprocess_df_model(read.csv('data/models/ridge.csv'))
 df_lot <- preprocess_df_model(read.csv('data/models/lot.csv'))
 df_lin <- preprocess_df_model(read.csv('data/models/linear.csv'))
 
+
 df_noisy_repeat <- preprocess_df_model(read.csv('data/models/noisy_model_variants/noisy_repeat.csv'))
 df_noisy_idx <- preprocess_df_model(read.csv('data/models/noisy_model_variants/noisy_idx.csv'))
 df_noisy_op_order <- preprocess_df_model(read.csv('data/models/noisy_model_variants/noisy_op_order.csv'))
 df_lot_plus_noise <- preprocess_df_model(read.csv('data/models/noisy_model_variants/lot_plus_noise.csv'))
 df_true_plus_noise <- preprocess_df_model(read.csv('data/models/noisy_model_variants/true_plus_noise.csv'))
+df_true_plus_noise <- preprocess_df_model(read.csv('data/models/noisy_model_variants/true_plus_noise.csv'))
+```
+
+```{r}
+df_lot_rec <- preprocess_df_model(read.csv('../models/LoT/rec_stim_output_y_2/lot_all.csv'))
+```
+
+```{r}
+df_lot <- preprocess_df_model(read.csv('/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/data/models/lot.csv'))
+df_ss <- preprocess_df_model(read.csv('/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/models/hier_dumb/output/ss_all.csv'))
+df_lot_no_recursion <- preprocess_df_model(read.csv('/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/data/models/lot_no_recursion.csv'))
 
 ```
 
+
+
 ```{r, echo=F, message=F}
 
-out_folder <- "/figs/videos/predictions/"
-part <- "Adults"
-mod1 <- "LoT"
-mod2 <- "Lin"
-df <- df_adult
-df_model1 <- df_lot
-df_model2 <- df_lin
+out_folder <- "/Users/traceymills/Dropbox (MIT)/cocosci_projects/dots/spatiotemporal_comparitive/analyses/figs/videos/predictions/kids/recursion"
+
+part <- "Children"
+mod1 <- "LoT no recursion"
+mod2 <- "LoT"
+df <- df_kid
+df_model1 <- df_lot_no_recursion
+df_model2 <- df_lot
 
 unlink(out_folder, recursive=TRUE)
 dir.create(out_folder)
@@ -186,7 +201,7 @@ f_plot_func_sbs <- function(f) {
       geom_point(data=df_tpt, aes(x=shift_x3+x_next, y=shift_y3+y_next), color="gold", shape=8, size=4, stroke=2.0) +
       
       #first human response
-      geom_point(data=df_tpt, aes(x=shift_x1+x_pred, y=shift_y1+y_pred, color="participant"), shape=20, size=3, stroke=1) +
+      geom_point(data=df_tpt, aes(x=shift_x1+x_pred, y=shift_y1+y_pred, color="participant"), size=2, stroke=1) +
       
       #model predictions with noise
       # predictions + noise from top 3 particles
@@ -224,3 +239,91 @@ for (id in sort(unique(df$func.type))) {
   print("")
 }
 ```
+
+# single participant or model
+```{r}
+
+f_plot_func_single <- function(f, df, name, col) {
+  dir.create(paste(out_folder, f, sep="/"))
+  #need range for setting scale of plot
+  df_seq <- subset(df_lot_rec, (df_lot_rec$func.type == f))
+  x_min <- min(min(df_seq$x_next, na.rm=TRUE), min(df_seq$x_pred, na.rm=TRUE))
+  x_max <- max(max(df_seq$x_next, na.rm=TRUE), max(df_seq$x_pred, na.rm=TRUE))
+  y_min <- min(min(df_seq$y_next, na.rm=TRUE), min(df_seq$y_pred, na.rm=TRUE))
+  y_max <- max(max(df_seq$y_next, na.rm=TRUE), max(df_seq$y_pred, na.rm=TRUE))
+  
+  df_seq <- subset(df, (df$func.type == f))
+  
+  for (i in (min(df$tpt)+1):max(df$tpt)) {
+    df_tpt <- subset(df_seq, (df_seq$tpt == i))
+    df_hist <- df_seq[order(df_seq$tpt),] %>% filter(tpt<i)
+    
+    p <- ggplot() +
+      #prev points and path
+      geom_path(data=df_hist, aes(x=x_next, y=y_next), size=0.5, linetype="dotted") +
+      geom_point(data=df_hist, aes(x=x_next, y=y_next), size=5) +
+      #next true point
+      geom_point(data=df_tpt, aes(x=x_next, y=y_next), color="gold", shape=8, size=7, stroke=2.0) +
+      #predictions
+      geom_point(data=df_tpt, aes(x=x_pred, y=y_pred, alpha=posterior), color=col, shape=4, size=6, stroke=2) +
+      #geom_point(data=df_tpt, aes(x=x_pred, y=y_pred), color=col, size=4, alpha=0.7) +
+      coord_cartesian(xlim=c(x_min, x_max), ylim=c(y_min, y_max)) +
+      theme_void() +
+      theme(panel.background = element_rect(fill = "white")) +
+      guides(alpha="none",size="none", fill="none", color="none") +
+      scale_color_manual(labels = c("Children"="Children", "Adults"="Adults",  "LoT"="LoT", "GPSL"="GPSL", "GPNC"="GPNC", "Ridge"="Ridge", "Linear"="Linear"), values=c("GPNC"="orange1", "Ridge"=ridge_color, "Linear"=lin_color, "Adults"=adult_color, "LoT"=lot_color, "GPSL"=gpsl_color), limits = c("GPNC", "Children", "Ridge", "LoT", "Linear", "GPSL")) +
+      scale_fill_manual(labels = c("Children"="Children", "Adults"="Adults", "LoT"="LoT", "GPSL"="GPSL", "GPNC"="GPNC", "Ridge"="Ridge", "Linear"="Linear"), values=c("Children"=kid_color,  "GPNC"="orange1", "Ridge"=ridge_color, "Linear"=lin_color, "Adults"=adult_color, "LoT"=lot_color, "GPSL"=gpsl_color), limits = c("GPNC", "Children", "Adults", "Ridge", "LoT", "Linear", "GPSL"))
+      #scale_radius(range=c(0.75,1.5))
+    f_name <- paste(paste(paste(paste(out_folder, f, sep="/"),f,sep="/"), as.character(i),sep="_n"),".png",sep="")
+    ggsave(f_name, plot=p,width=9,height=8, dpi=500)
+  }
+}
+
+dfs = list(df_lot_rec)#, df_kid, df_lot, df_gpsl, df_gpnc, df_ridge, df_lin)
+names = c("Lot rec.")#, "Children", "LoT", "GPSL", "GPNC", "Ridge", "Linear")
+colors = c(lot_color)#, kid_color,  lot_color, gpsl_color, "orange1", ridge_color, lin_color)
+
+for (i in seq_along(dfs)) {
+  df <- dfs[[i]] %>% filter(tpt<15)
+  col <- colors[i]
+  
+  df <- df %>% mutate(x_pred = ifelse(tpt<3, NA, x_pred),
+                      y_pred = ifelse(tpt<3, NA, y_pred))
+  
+  name <- names[i]
+  
+  df <- df[order(df$tpt),]
+  out_folder <- paste("figs/lot_rec_vids/", name, sep="")
+  unlink(out_folder, recursive=TRUE)
+  dir.create(out_folder)
+
+  for (id in sort(unique(df$func.type))) {
+    print(id)
+    f_plot_func_single(id, df, name, col)
+    print("")
+  }
+}
+```
+```{r}
+adult_color = "#7c7fff"
+monkey_color = "#00695C" 
+kid_color = "#f335f7"
+
+lot_color = "#8BC34A"
+gpsl_color = "#ff5c5c"
+
+ridge_color = "#9C27B0"
+gpnc_color = "#fece30" 
+
+lin_color = "gray"
+```
+
+
+
+
+
+
+
+
+
+
